dom/canvas/WebGLFramebuffer.h
@@ -117,6 +117,7 @@ public:
     bool AllImageRectsMatch() const;
     GLenum PrecheckFramebufferStatus() const;
     GLenum CheckFramebufferStatus() const;
+    GLenum GetFormatForAttachment(const WebGLFramebuffer::Attachment& attachment) const;
 
     bool HasDepthStencilConflict() const {
         return int(mDepthAttachment.IsDefined()) +
